2017-09-24  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/options.js:
	Define loadDefaultCss function.

2017-09-23  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.changeOptions function.

	* tryXpath/pages/options.js:
	Add a feature which save the options.

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.loadOptions function.

	* tryXpath/pages/options.js:
	Modify this file to load the options when window is loaded.

	* tryXpath/pages/options.html:
	Create this file.

	* tryXpath/pages/options.js:
	Create this file.

	* tryXpath/scripts/try_xpath_content.js:
	Define classes variable.
	Remove variables. elemClass, contextClass, focusedClass,
	focusedAncestorClass.

	* tryXpath/background/try_xpath_background.js:
	Define classes variable.
	Define genericListener.listeners.loadClasses function.

2017-09-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define cssInserted variable.
	Define genericListener.listeners.finishInsertCss function.

	* tryXpath/manifest.json:
	Add "activeTab" to permissions property.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function. This function
	send "insertCss" event.

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.insertCss function.

	* tryXpath/manifest.json:
	Remove content_scripts.css property.

	* tryXpath/background/try_xpath_background.js:
	Define loadCss function.

2017-09-18  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Write description text.

	* tryXpath/scripts/try_xpath_content.js:
	Modify focusItem function.

	* tryXpath/css/try_xpath_insert.css :
	Modify styles.

2017-09-17  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify this file to highlight the ancestors of the focused element.

	* tryXpath/scripts/try_xpath_functions.js: