@@ -1,4 +1,14 @@
+2017-09-28  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/background/try_xpath_background.js:
+	Modify this file. The css is loaded from storage.sync when the
+	background script is loaded.
+
 2017-09-24  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/background/try_xpath_background.js:
+	Remove loadCss function.
+	Copy loadDefaultCss function.
 
 	* tryXpath/pages/options.js:
 	Define loadDefaultCss function.
